--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "cypress": "^14.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
